<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="expense_tracker"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_expense_fg"
        android:shortcutShortLabel="@string/shortcut_expense"
        android:shortcutLongLabel="@string/shortcut_expense_long">
        <intent
            android:action="app.ainexus.SHORTCUT"
            android:targetPackage="app.ainexus.ai_nexus"
            android:targetClass="app.ainexus.ai_nexus.MainActivity">
            <extra android:name="shortcut_tab" android:value="0" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search_fg"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="app.ainexus.SHORTCUT"
            android:targetPackage="app.ainexus.ai_nexus"
            android:targetClass="app.ainexus.ai_nexus.MainActivity">
            <extra android:name="shortcut_tab" android:value="2" />
            <extra android:name="shortcut_subtab" android:value="0" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="news"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_news_fg"
        android:shortcutShortLabel="@string/shortcut_news"
        android:shortcutLongLabel="@string/shortcut_news_long">
        <intent
            android:action="app.ainexus.SHORTCUT"
            android:targetPackage="app.ainexus.ai_nexus"
            android:targetClass="app.ainexus.ai_nexus.MainActivity">
            <extra android:name="shortcut_tab" android:value="1" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="cloud_upload"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_cloud_fg"
        android:shortcutShortLabel="@string/shortcut_cloud"
        android:shortcutLongLabel="@string/shortcut_cloud_long">
        <intent
            android:action="app.ainexus.SHORTCUT"
            android:targetPackage="app.ainexus.ai_nexus"
            android:targetClass="app.ainexus.ai_nexus.MainActivity">
            <extra android:name="shortcut_tab" android:value="3" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="dictionary"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_dictionary_fg"
        android:shortcutShortLabel="@string/shortcut_dictionary"
        android:shortcutLongLabel="@string/shortcut_dictionary_long">
        <intent
            android:action="app.ainexus.SHORTCUT"
            android:targetPackage="app.ainexus.ai_nexus"
            android:targetClass="app.ainexus.ai_nexus.MainActivity">
            <extra android:name="shortcut_tab" android:value="2" />
            <extra android:name="shortcut_subtab" android:value="3" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="rephraser"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_rephraser_fg"
        android:shortcutShortLabel="@string/shortcut_rephraser"
        android:shortcutLongLabel="@string/shortcut_rephraser_long">
        <intent
            android:action="app.ainexus.SHORTCUT"
            android:targetPackage="app.ainexus.ai_nexus"
            android:targetClass="app.ainexus.ai_nexus.MainActivity">
            <extra android:name="shortcut_tab" android:value="2" />
            <extra android:name="shortcut_subtab" android:value="1" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="grammarly"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_grammarly_fg"
        android:shortcutShortLabel="@string/shortcut_grammarly"
        android:shortcutLongLabel="@string/shortcut_grammarly_long">
        <intent
            android:action="app.ainexus.SHORTCUT"
            android:targetPackage="app.ainexus.ai_nexus"
            android:targetClass="app.ainexus.ai_nexus.MainActivity">
            <extra android:name="shortcut_tab" android:value="2" />
            <extra android:name="shortcut_subtab" android:value="2" />
        </intent>
    </shortcut>
</shortcuts>
